// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppContainer /> Renders AppContainer component without crashing 1`] = `
<DocumentFragment>
  <p>
    local
  </p>
</DocumentFragment>
`;

exports[`<AppWithEnvironment /> Renders AppWithEnvironment component without crashing 1`] = `
<DocumentFragment>
  <div
    class="af-loader af-loader--fullscreen af-loader--active"
  >
    <p
      class="af-loader__spinner"
    >
      Chargement de l'environnement...
    </p>
  </div>
</DocumentFragment>
`;
